--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>
   function showAlert() {
     var yourName=prompt("Hi! What's Your Name Friend?");
-    alert ("Hello! " + yourName.slice(0,1).toUpperCase() + yourName.slice(1,yourName.length).toLowerCase() + ", Am Lalith Kumar.\nNice To Meet You :)");
+    alert ("Hello! " + yourName.slice(0,1).toUpperCase() + yourName.slice(1,yourName.length).toLowerCase() + ", Swara Sara Band.\nWishes You A Happy New Year :)");
   }
   </script>
   </head>
