--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Alert JS -->
     <script>
   function showAlert() {
-    var yourName=prompt("Hi! What's Your Name Friend?");
-    alert ("Hello! " + yourName.slice(0,1).toUpperCase() + yourName.slice(1,yourName.length).toLowerCase() + ", Swara Sara Band.\nWishes You A Happy New Year :)");
+    var yourName=prompt("Hi! What's Your Name?");
+    alert ("Hello! " + yourName.slice(0,1).toUpperCase() + yourName.slice(1,yourName.length).toLowerCase() + ", Swara Sara is pleased to meet you.\nWe Wishes You A Happy New Year :)");
   }
   </script>
   </head>
