--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script>
   function showAlert() {
     var yourName=prompt("Hi! What's Your Name?");
-    alert ("Hello! " + yourName.slice(0,1).toUpperCase() + yourName.slice(1,yourName.length).toLowerCase() + ", Swara Sara is pleased to meet you.\nWe Wishes You A Healthy and Happy New Year :)");
+    alert ("Hello! " + yourName.slice(0,1).toUpperCase() + yourName.slice(1,yourName.length).toLowerCase() + ", Swara Sara is pleased to meet you.\nWe Wish You A Healthy and Happy New Year :)");
   }
   </script>
   </head>
